--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,32 +8,30 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.107">
 
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/player1_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Player 1:" />
+                android:text="@string/player1_name_label" />
 
             <EditText
                 android:id="@+id/edit_player1_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="9"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:text="@string/player1_name_default" />
         </TableRow>
 
         <TableRow
@@ -41,17 +39,17 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/player2_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Player 2:" />
+                android:text="@string/player2_name_label" />
 
             <EditText
                 android:id="@+id/edit_player2_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="9"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:text="@string/player2_name_default" />
         </TableRow>
 
     </TableLayout>
@@ -69,15 +67,14 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.267"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.373">
+        app:layout_constraintVertical_bias="0.48">
 
         <Button
             android:id="@+id/start_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start" />
+            android:text="@string/start_btn_text" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
