--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -18,32 +18,32 @@
             android:id="@+id/question_textbox"
             android:layout_width="match_parent"
             android:layout_height="218dp"
-            android:text="Question......"
+            android:text="@string/question_text_default"
             android:textSize="30sp" />
 
         <Button
             android:id="@+id/answer_A"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="A" />
+            android:text="@string/answer_A_default" />
 
         <Button
             android:id="@+id/answer_B"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="B" />
+            android:text="@string/answer_B_default" />
 
         <Button
             android:id="@+id/answer_C"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="C" />
+            android:text="@string/answer_C_default" />
 
         <Button
             android:id="@+id/answer_D"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="D" />
+            android:text="@string/answer_D_default" />
 
     </LinearLayout>
 
